--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -2112,7 +2112,68 @@
           <input min="0" max="4" name="attr_matrix_dice_modifier" placeholder="0" title="@{matrix_dice_modifier}" type="number" value="0"/>
         </label><span class="settings" data-i18n="d6">d6</span><span class="settings tiny-span">=</span><span name="attr_display_matrix_mod"></span><span class="tiny-span">+</span><span name="attr_matrix_dice"></span><span class="tiny-span" data-i18n="d6">d6</span>
       </div>
-      <div class="row"></div>
+      <div class="row grunt">
+        <h2 data-i18n="movement">Movement</h2>
+        <label class="settings" data-i18n-title="walk modifier" title="walk modifier">
+          <input name="attr_walk_modifier" placeholder="0" title="@{walk_modifier}" type="number" value="0"/>
+        </label><span class="settings"> / </span>
+        <label class="settings" data-i18n-title="run modifier" title="run modifier">
+          <input name="attr_run_modifier" placeholder="0" title="@{run_modifier}" type="number" value="0"/>
+        </label><span class="settings"> / + </span>
+        <label class="settings" data-i18n-title="movement modifier" title="movement modifier">
+          <input name="attr_movement_mod_modifier" placeholder="2" title="@{movement_mod_modifier}" type="number" value="2"/>
+        </label><span class="settings"></span><span class="tiny-span">=</span><span name="attr_walk" title="@{walk}"></span><span> / </span><span name="attr_run" title="@{run}"></span><span> / + </span><span name="attr_movement_mod" title="@{movement_mod}"></span><span></span>
+      </div>
+      <div class="row grunt">
+        <button data-i18n="conditionmonitorps" name="act_cond_reset" type="action">Condition Monitor (P/S)</button>
+        <label class="settings" data-i18n-title="physicalbonus" title="physicalbonus">
+          <input name="attr_physical_modifier" placeholder="0" title="@{physical_modifier}" type="number" value="0"/>
+        </label><span class="settings">/</span>
+        <label class="settings" data-i18n-title="stunbonus" title="stunbonus">
+          <input name="attr_stun_modifier" placeholder="0" title="@{stun_modifier}" type="number" value="0"/>
+        </label><span class="settings tiny-span">=</span><span name="attr_physical" title="@{physical_modifier}"></span><span>/</span><span name="attr_stun" title="@{stun_modifier}"></span>
+      </div>
+      <div class="row grunt">
+        <h2 data-i18n="limits">Limits</h2><br/>
+        <h3 data-i18n="physical">val</h3>
+        <label data-i18n-title="modifier" title="modifier">
+          <input name="attr_physical_limit_modifier" placeholder="0" title="@{physical_limit_modifier}" type="number" value="0"/>
+        </label><span class="settings tiny-span">=</span><span name="attr_physical_limit" title="@{physical_limit}"></span>
+        <h3 data-i18n="mental">val</h3>
+        <label data-i18n-title="modifier" title="modifier">
+          <input name="attr_mental_limit_modifier" placeholder="0" title="@{mental_limit_modifier}" type="number" value="0"/>
+        </label><span class="settings tiny-span">=</span><span name="attr_mental_limit" title="@{mental_limit}"></span>
+        <h3 data-i18n="social">val</h3>
+        <label data-i18n-title="modifier" title="modifier">
+          <input name="attr_social_limit_modifier" placeholder="0" title="@{social_limit_modifier}" type="number" value="0"/>
+        </label><span class="settings tiny-span">=</span><span name="attr_social_limit" title="@{social_limit}"></span>
+      </div>
+      <div class="row grunt">
+        <h2 data-i18n="paintolerance">Pain Tolerance</h2>
+        <label data-i18n="paintolerance">
+          <input name="attr_pain_tolerance" min="-1" max="3" placeholder="0" title="@{pain_tolerance}" type="number" value="0"/>
+        </label>
+      </div>
+      <div class="row vehicle">
+        <h2 data-i18n="conditionmonitorpm">Condition Monitor (P/M)</h2>
+        <label class="settings" data-i18n-title="physicalbonus" title="physicalbonus">
+          <input name="attr_physical_modifier" placeholder="0" title="@{physical_modifier}" type="number" value="0"/>
+        </label><span class="settings">/</span>
+        <label class="settings" data-i18n-title="matrixbonus" title="matrixbonus">
+          <input name="attr_matrix_modifier" placeholder="0" title="@{matrix_modifier}" type="number" value="0"/>
+        </label><span class="settings tiny-span">=</span><span name="attr_physical" title="@{physical_modifier}"></span><span>/</span><span name="attr_matrix" title="@{matrix_modifier}"></span>
+      </div>
+      <div class="row vehicle">
+        <label data-i18n="data_processing">key
+          <input name="attr_data_processing" min="0" placeholder="0" title="@{data_processing}" type="number" value=""/>
+        </label>
+        <label data-i18n="firewall">key
+          <input name="attr_firewall" min="0" placeholder="0" title="@{firewall}" type="number" value=""/>
+        </label>
+        <label data-i18n="devicerating">key
+          <input name="attr_device_rating" min="0" placeholder="0" title="@{device_rating}" type="number" value=""/>
+        </label>
+      </div>
     </div>
     <div class="column"></div>
     <div class="column"></div>
