npc in progress

--- a/Shadowrun5thEdition/src/npc.html
+++ b/Shadowrun5thEdition/src/npc.html
@@ -2,29 +2,17 @@
 		<input type="hidden" class="npc-type" name="attr_sheet_type" value="grunt" />
 	<!-- ~~~~~~~~ modifieres  ~~~~~~~~ -->
 		<h1 data-i18n="bonuses">Bonuses</h1>
-		<div class="grunt vehicle 2col"><!--Start Mid modifieres-->
-			<label data-i18n="defense">Defense</label>
-					<input type="number" name="attr_defense_modifier" placeholder="0" value="0" />
-			<label data-i18n="armorrating">Armor Rating </label>
-				<input type="number" name="attr_armor_rating" placeholder="9" title="@{armor_rating}" value="0" /><br />
-			<label data-i18n="soakbonus">Soak Bonus </label>
-				<input type="number" name="attr_soak_modifier" placeholder="0" title="@{soak_modifier}"  value="0" /><br />
-			<label data-i18n="acidprotection">Acid Protection </label>
-				<input type="number" name="attr_acid_modifier" placeholder="0" title="@{acid_modifier}" value="0" /><br />
-			<label data-i18n="coldprotection">Cold Protection </label>
-				<input type="number" name="attr_cold_modifier" placeholder="0" title="@{cold_modifier}" value="0" /><br />
-			<label data-i18n="electricalprotection">Electrical Protection </label>
-				<input type="number" name="attr_electrical_modifier" placeholder="0" title="@{electrical_modifier}" value="0" /><br />
-			<label data-i18n="fireprotection">Fire Protection </label>
-				<input type="number" name="attr_fire_modifier" placeholder="0" value="0" title="@{fire_modifier}"" /><br />
-			<label data-i18n="radiationprotection">Radiation Protection </label>
-				<input type="number" name="attr_radiation_modifier" placeholder="0" title="@{radiation_modifier}" value="0" />
-		</div>
+
 		<div class="grunt 2col"><!--Start Right Checkboxes -->
 			<input class="character-type" type="checkbox" name="attr_flag_special" checked="checked" title="@{flag_special}" value="mundane" /><label data-i18n="mundane">Mundane</label><br />
-			<input class="character-type" type="checkbox" name="attr_flag_special" title="@{flag_special}" value="magic" /><label data-i18n="awakened">Awakened</label><br />
-			<input class="character-type" type="checkbox" name="attr_flag_special" title="@{flag_special}" value="resonance" /><label data-i18n="emerged">Emerged</label>
+			
+			<input class="character-type" type="checkbox" name="attr_flag_special" title="@{flag_special}" value="magic" />
+			<label data-i18n="awakened">Awakened</label><br />
+			
+			<input class="character-type" type="checkbox" name="attr_flag_special" title="@{flag_special}" value="resonance" />
+			<label data-i18n="emerged">Emerged</label>
 			<br /><br />
+			
 			<input class="character-type" type="checkbox" name="attr_flag_matrix" title="@{flag_matrix}" value="matrix" /><label data-i18n="matrixdevice">Matrix Device</label>
 		</div>
 		<div class="vehicle 2col"><!--Start Right Checkboxes -->
