--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -2136,21 +2136,21 @@
       <div class="row grunt">
         <h2 data-i18n="limits">Limits</h2><br/>
         <h3 data-i18n="physical">val</h3>
-        <label data-i18n-title="modifier" title="modifier">
+        <label class="settings" data-i18n-title="modifier" title="modifier">
           <input name="attr_physical_limit_modifier" placeholder="0" title="@{physical_limit_modifier}" type="number" value="0"/>
         </label><span class="settings tiny-span">=</span><span name="attr_physical_limit" title="@{physical_limit}"></span>
         <h3 data-i18n="mental">val</h3>
-        <label data-i18n-title="modifier" title="modifier">
+        <label class="settings" data-i18n-title="modifier" title="modifier">
           <input name="attr_mental_limit_modifier" placeholder="0" title="@{mental_limit_modifier}" type="number" value="0"/>
         </label><span class="settings tiny-span">=</span><span name="attr_mental_limit" title="@{mental_limit}"></span>
         <h3 data-i18n="social">val</h3>
-        <label data-i18n-title="modifier" title="modifier">
+        <label class="settings" data-i18n-title="modifier" title="modifier">
           <input name="attr_social_limit_modifier" placeholder="0" title="@{social_limit_modifier}" type="number" value="0"/>
         </label><span class="settings tiny-span">=</span><span name="attr_social_limit" title="@{social_limit}"></span>
       </div>
       <div class="row grunt">
-        <h2 data-i18n="paintolerance">Pain Tolerance</h2>
-        <label data-i18n="paintolerance">
+        <h2 class="settings" data-i18n="paintolerance">Pain Tolerance</h2>
+        <label class="settings" data-i18n-title="paintolerance" title="paintolerance">
           <input name="attr_pain_tolerance" min="-1" max="3" placeholder="0" title="@{pain_tolerance}" type="number" value="0"/>
         </label>
       </div>
@@ -2164,19 +2164,107 @@
         </label><span class="settings tiny-span">=</span><span name="attr_physical" title="@{physical_modifier}"></span><span>/</span><span name="attr_matrix" title="@{matrix_modifier}"></span>
       </div>
       <div class="row vehicle">
-        <label data-i18n="data_processing">key
-          <input name="attr_data_processing" min="0" placeholder="0" title="@{data_processing}" type="number" value=""/>
+        <div class="row">
+          <h2 data-i18n="data_processing">key</h2>
+          <label class="settings" data-i18n-title="data_processing" title="data_processing"> 
+            <input name="attr_data_processing" min="0" placeholder="0" title="@{data_processing}" type="number" value=""/>
+          </label><span class="settings tiny-span">=</span><span name="attr_data_processing"></span>
+        </div>
+        <div class="row">
+          <h2 data-i18n="firewall">key</h2>
+          <label class="settings" data-i18n-title="firewall" title="firewall"> 
+            <input name="attr_firewall" min="0" placeholder="0" title="@{firewall}" type="number" value=""/>
+          </label><span class="settings tiny-span">=</span><span name="attr_firewall"></span>
+        </div>
+        <div class="row">
+          <h2 data-i18n="devicerating">key</h2>
+          <label class="settings" data-i18n-title="devicerating" title="devicerating"> 
+            <input name="attr_device_rating" min="0" placeholder="0" title="@{device_rating}" type="number" value=""/>
+          </label><span class="settings tiny-span">=</span><span name="attr_device_rating"></span>
+        </div>
+      </div>
+    </div>
+    <div class="column grunt vehicle">
+      <div class="row">
+        <h2 data-i18n="armorrating">Armor Rating</h2>
+        <label class="settings" data-i18n-title="armorrating" title="armorrating">
+          <input ="" ame="attr_armor_rating" placeholder="9" title="@{armor_rating}" type="number" value="0"/>
         </label>
-        <label data-i18n="firewall">key
-          <input name="attr_firewall" min="0" placeholder="0" title="@{firewall}" type="number" value=""/>
+      </div>
+      <div class="row">
+        <h2 data-i18n="Defense Modifier">key</h2>
+        <label class="settings" data-i18n-title="Defense Modifier" title="Defense Modifier">
+          <input name="attr_defense_modifier" placeholder="0" title="@{defense_modifier}" type="number" value="0"/>
         </label>
-        <label data-i18n="devicerating">key
-          <input name="attr_device_rating" min="0" placeholder="0" title="@{device_rating}" type="number" value=""/>
+      </div>
+      <div class="row">
+        <h2 data-i18n="Soak Modifier">key</h2>
+        <label class="settings" data-i18n-title="Soak Modifier" title="Soak Modifier">
+          <input name="attr_soak_modifier" placeholder="0" title="@{soak_modifier}" type="number" value="0"/>
+        </label>
+      </div>
+      <div class="row">
+        <h2 data-i18n="acidprotection">key</h2>
+        <label class="settings" data-i18n-title="acidprotection" title="acidprotection">
+          <input name="attr_acid_modifier" placeholder="0" title="@{acid_modifier}" type="number" value="0"/>
+        </label>
+      </div>
+      <div class="row">
+        <h2 data-i18n="coldprotection">key</h2>
+        <label class="settings" data-i18n-title="coldprotection" title="coldprotection">
+          <input name="attr_cold_modifier" placeholder="0" title="@{cold_modifier}" type="number" value="0"/>
+        </label>
+      </div>
+      <div class="row">
+        <h2 data-i18n="electricalprotection">key</h2>
+        <label class="settings" data-i18n-title="electricalprotection" title="electricalprotection">
+          <input name="attr_electrical_modifier" placeholder="0" title="@{electrical_modifier}" type="number" value="0"/>
+        </label>
+      </div>
+      <div class="row">
+        <h2 data-i18n="fireprotection">key</h2>
+        <label class="settings" data-i18n-title="fireprotection" title="fireprotection">
+          <input name="attr_fire_modifier" placeholder="0" title="@{fire_modifier}" type="number" value="0"/>
+        </label>
+      </div>
+      <div class="row">
+        <h2 data-i18n="radiationprotection">key</h2>
+        <label class="settings" data-i18n-title="radiationprotection" title="radiationprotection">
+          <input name="attr_radiation_modifier" placeholder="0" title="@{radiation_modifier}" type="number" value="0"/>
         </label>
       </div>
     </div>
-    <div class="column"></div>
-    <div class="column"></div>
+    <div class="column">
+      <div class="row">
+        <h2 data-i18n="mundane">key</h2>
+        <label class="settings" data-i18n-title="mundane" title="mundane">
+          <input class="character-type" name="attr_flag_special" checked="checked" title="@{flag_special}" type="checkbox" value="mundane"/>
+        </label>
+      </div>
+      <div class="row">
+        <h2 data-i18n="awakened">key</h2>
+        <label class="settings" data-i18n-title="awakened" title="awakened">
+          <input class="character-type" name="attr_flag_special" checked="checked" title="@{flag_special}" type="checkbox" value="magic"/>
+        </label>
+      </div>
+      <div class="row">
+        <h2 data-i18n="emerged">key</h2>
+        <label class="settings" data-i18n-title="emerged" title="emerged">
+          <input class="character-type" name="attr_flag_special" checked="checked" title="@{flag_special}" type="checkbox" value="resonance"/>
+        </label>
+      </div>
+      <div class="row">
+        <h2>Matrix Device</h2>
+        <label class="settings" title="Matrix Device">
+          <input class="character-type" name="attr_flag_matrix" title="@{flag_matrix}" type="checkbox" value="matrix"/>
+        </label>
+      </div>
+      <div class="row vehicle">
+        <label class="settings" title="Drone">
+          <input class="character-type" name="attr_flag_drone" title="@{flag_drone}" type="checkbox" value="drone"/>
+        </label>
+      </div>
+    </div>
   </div>
 </div><div class="footer">
 	<div>
