[Ryuutama]: reorganizing info page, css fixes

--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -402,7 +402,7 @@
             <!-- End High Level Tabs -->
 
             <span class='characterDetails'>
-                <div class='flex'>
+               <div class='flex'>
                     <img class="logo" src="https://cf.geekdo-images.com/opengraph/img/a-aup82Fu1aL6ZuzyN-1yWlo3dA=/fit-in/1200x630/pic1949043.png">
                     <div class='flex-column round-box'>
                         <div class="flex">
@@ -439,13 +439,13 @@
                     </div>
                 </div>
 
-                <div class='flex'>
+                <div class='flex personalItems'>
                     <div class='flex-column'>
-                        <label class="attr-label"> Personal Item </label>
+                        <label class="attrLabel"> Personal Item </label>
                         <input type='text' name='attr_personalItem'/>
                     </div>
                     <div class='flex-column'>
-                        <label class="attr-label"> Party Role </label>
+                        <label class="attrLabel"> Party Role </label>
                         <select name="attr_role">
                             <option value=''></option>
                             <option value='Journal Keeper'>Journal Keeper</option>
@@ -457,44 +457,41 @@
                 </div>
 
                 <div class="flex-column">
-                    <label class="attr-label">Image Color/Appearance</label>
+                    <label class="attrLabel">Image Color/Appearance</label>
                     <textarea name='attr_charAppearance'></textarea>
                 </div>
 
                 <div class='flex-column'>
-                    <label class="attr-label">Hometown/Reason for Travel</label>
+                    <label class="attrLabel">Hometown/Reason for Travel</label>
                     <textarea name='attr_charHometown'></textarea>
                 </div>
 
                 <div class='flex-column'>
-                    <label class="attr-label">Notes</label>
+                    <label class="attrLabel">Notes</label>
                     <textarea name='attr_charNotes'></textarea>
                 </div>
-                
             </span>
-
 
                 <span class='characterClass'>
                     <div class='sheet-2olrow'>
                         <label class='headerLabel'>Class</label>
                     </div>
-                    <div class='flex-column'>
+                    <div class='sheet-2colrow'>
+                        <div class='sheet-col'>
                             Class 1:
-                            <div class="flex">
-                                <select name="attr_class1" class='charoptions select-css'>
-                                    <option value=''></option>
-                                    <option value='Artisan'>Artisan</option>
-                                    <option value='Farmer'>Farmer</option>
-                                    <option value='Healer'>Healer</option>
-                                    <option value='Hunter'>Hunter</option>
-                                    <option value='Merchant'>Merchant</option>
-                                    <option value='Minstrel'>Minstrel</option>
-                                    <option value='Navigator'>Navigator</option>
-                                    <option value='Noble'>Noble</option>
-                                    <option value='Other'>Other</option>
-                                </select>
-                                <input type='text' name='attr_class1Other' placeholder='If other, type class name here'/>
-                            </div>
+                            <select name="attr_class1" class='charoptions'>
+                                <option value=''></option>
+                                <option value='Artisan'>Artisan</option>
+                                <option value='Farmer'>Farmer</option>
+                                <option value='Healer'>Healer</option>
+                                <option value='Hunter'>Hunter</option>
+                                <option value='Merchant'>Merchant</option>
+                                <option value='Minstrel'>Minstrel</option>
+                                <option value='Navigator'>Navigator</option>
+                                <option value='Noble'>Noble</option>
+                                <option value='Other'>Other</option>
+                            </select>
+                            <input type='text' name='attr_class1Other' placeholder='If other, type class name here'/>
                         </div>
                         <div class='sheet-col'>
                             Class 2:
@@ -560,9 +557,9 @@
                     </div>
 
                     <label class='headerLabel checkLabel'>Mastered Weapons</label>
-                    <div class='sheet-row'>
+                    <div>
                         <div>Select initial weapon mastery:</div>
-                        <div class='sheet-col'>
+                        <div class='flex'>
                             <input type="radio" class="radioChoice radioChoice2" name="attr_initialMastery" value="2" title="Blade"/>
                             <span class="radioChoice radioChoice2">Blade</span>
                             <input type="radio" class="radioChoice radioChoice3" name="attr_initialMastery" value="3" title="Polearm"/>
@@ -576,13 +573,13 @@
                             <input type="radio" class="radioChoice radioChoice6" name="attr_initialMastery" value="6" title="Unarmed"/>
                             <span class="radioChoice radioChoice6">Unarmed</span>
                         </div>
-                    </div>
+                    </div>a
 
                     <span>
                         <input type='checkbox' class='showDiv' name='attr_showAttackTypeMastery' value='1'>
-                        <div class='sheet-row'>
+                        <div>
                             <div>Select bonus weapon mastery gained from the attack type:</div>
-                            <div class='sheet-col'>
+                            <div class='flex'>
                                 <input type="radio" class="radioChoice radioChoice2" name="attr_attackTypeMastery" value="2" title="Blade"/>
                                 <span class="radioChoice radioChoice2">Blade</span>
                                 <input type="radio" class="radioChoice radioChoice3" name="attr_attackTypeMastery" value="3" title="Polearm"/>
@@ -601,9 +598,9 @@
 
                     <span>
                         <input type='checkbox' class='showDiv' name='attr_showSecondAttackTypeMastery' value='1'>
-                        <div class='sheet-row'>
+                        <div>
                             <div>Select additional bonus weapon mastery gained from having the attack type twice:</div>
-                            <div class='sheet-col'>
+                            <div class='flex'>
                                 <input type="radio" class="radioChoice radioChoice2" name="attr_attackTypeMastery2" value="2" title="Blade"/>
                                 <span class="radioChoice radioChoice2">Blade</span>
                                 <input type="radio" class="radioChoice radioChoice3" name="attr_attackTypeMastery2" value="3" title="Polearm"/>
@@ -622,9 +619,9 @@
 
                     <span>
                         <input type='checkbox' class='showDiv' name='attr_showWeaponGrace' value='1'>
-                        <div class='sheet-row'>
+                        <div>
                             <div>Select bonus weapon mastery gained from the noble class (can be the same as a previously selected weapon mastery):</div>
-                            <div class='sheet-col'>
+                            <div class="weaponBar">
                                 <input type="radio" class="radioChoice radioChoice1" name="attr_weaponGrace" value="2" title="Blade"/>
                                 <span class="radioChoice radioChoice1">Blade</span>
                                 <input type="radio" class="radioChoice radioChoice2" name="attr_weaponGrace" value="3" title="Polearm"/>
@@ -637,9 +634,9 @@
 
                     <span>
                         <input type='checkbox' class='showDiv' name='attr_showSecondWeaponGrace' value='1'>
-                        <div class='sheet-row'>
+                        <div>
                             <div>Select additional bonus weapon mastery gained from having the noble class twice:</div>
-                            <div class='sheet-col'>
+                            <div class="weaponBar">
                                 <input type="radio" class="radioChoice radioChoice1" name="attr_weaponGrace2" value="2" title="Blade"/>
                                 <span class="radioChoice radioChoice1">Blade</span>
                                 <input type="radio" class="radioChoice radioChoice2" name="attr_weaponGrace2" value="3" title="Polearm"/>
@@ -1561,7 +1558,8 @@
         </div>
         <!--- End of NPC sheet-->
     </div>
-     <!-- Roll Templates -->
+    
+      <!-- Roll Templates -->
             <rolltemplate class="sheet-rolltemplate-skillCheck">
     			<div class="container">
     				<div class="sheet-rolltemplate-skillCheck">
