--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -2134,16 +2134,15 @@
         </label><span class="settings tiny-span">=</span><span name="attr_physical" title="@{physical_modifier}"></span><span>/</span><span name="attr_stun" title="@{stun_modifier}"></span>
       </div>
       <div class="row grunt">
-        <h2 data-i18n="limits">Limits</h2><br/>
-        <h3 data-i18n="physical">val</h3>
+        <h2 data-i18n="physical">val</h2>
         <label class="settings" data-i18n-title="modifier" title="modifier">
           <input name="attr_physical_limit_modifier" placeholder="0" title="@{physical_limit_modifier}" type="number" value="0"/>
         </label><span class="settings tiny-span">=</span><span name="attr_physical_limit" title="@{physical_limit}"></span>
-        <h3 data-i18n="mental">val</h3>
+        <h2 data-i18n="mental">val</h2>
         <label class="settings" data-i18n-title="modifier" title="modifier">
           <input name="attr_mental_limit_modifier" placeholder="0" title="@{mental_limit_modifier}" type="number" value="0"/>
         </label><span class="settings tiny-span">=</span><span name="attr_mental_limit" title="@{mental_limit}"></span>
-        <h3 data-i18n="social">val</h3>
+        <h2 data-i18n="social">val</h2>
         <label class="settings" data-i18n-title="modifier" title="modifier">
           <input name="attr_social_limit_modifier" placeholder="0" title="@{social_limit_modifier}" type="number" value="0"/>
         </label><span class="settings tiny-span">=</span><span name="attr_social_limit" title="@{social_limit}"></span>
@@ -2195,73 +2194,68 @@
         <h2 data-i18n="Defense Modifier">key</h2>
         <label class="settings" data-i18n-title="Defense Modifier" title="Defense Modifier">
           <input name="attr_defense_modifier" placeholder="0" title="@{defense_modifier}" type="number" value="0"/>
-        </label>
+        </label><span class="settings tiny-span">=</span><span name="attr_defense"></span>
       </div>
       <div class="row">
         <h2 data-i18n="Soak Modifier">key</h2>
         <label class="settings" data-i18n-title="Soak Modifier" title="Soak Modifier">
           <input name="attr_soak_modifier" placeholder="0" title="@{soak_modifier}" type="number" value="0"/>
-        </label>
+        </label><span class="settings tiny-span">=</span><span name="attr_soak"></span>
       </div>
       <div class="row">
         <h2 data-i18n="acidprotection">key</h2>
         <label class="settings" data-i18n-title="acidprotection" title="acidprotection">
           <input name="attr_acid_modifier" placeholder="0" title="@{acid_modifier}" type="number" value="0"/>
-        </label>
+        </label><span class="settings tiny-span">=</span><span name="attr_acid_protection"></span>
       </div>
       <div class="row">
         <h2 data-i18n="coldprotection">key</h2>
         <label class="settings" data-i18n-title="coldprotection" title="coldprotection">
           <input name="attr_cold_modifier" placeholder="0" title="@{cold_modifier}" type="number" value="0"/>
-        </label>
+        </label><span class="settings tiny-span">=</span><span name="attr_cold_protection"></span>
       </div>
       <div class="row">
         <h2 data-i18n="electricalprotection">key</h2>
         <label class="settings" data-i18n-title="electricalprotection" title="electricalprotection">
           <input name="attr_electrical_modifier" placeholder="0" title="@{electrical_modifier}" type="number" value="0"/>
-        </label>
+        </label><span class="settings tiny-span">=</span><span name="attr_electrical_protection"></span>
       </div>
       <div class="row">
         <h2 data-i18n="fireprotection">key</h2>
         <label class="settings" data-i18n-title="fireprotection" title="fireprotection">
           <input name="attr_fire_modifier" placeholder="0" title="@{fire_modifier}" type="number" value="0"/>
-        </label>
+        </label><span class="settings tiny-span">=</span><span name="attr_fire_protection"></span>
       </div>
       <div class="row">
         <h2 data-i18n="radiationprotection">key</h2>
         <label class="settings" data-i18n-title="radiationprotection" title="radiationprotection">
           <input name="attr_radiation_modifier" placeholder="0" title="@{radiation_modifier}" type="number" value="0"/>
-        </label>
+        </label><span class="settings tiny-span">=</span><span name="attr_radiation_protection"></span>
       </div>
     </div>
     <div class="column">
       <div class="row">
-        <h2 data-i18n="mundane">key</h2>
         <label class="settings" data-i18n-title="mundane" title="mundane">
           <input class="character-type" name="attr_flag_special" checked="checked" title="@{flag_special}" type="checkbox" value="mundane"/>
+          <h2 data-i18n="mundane">key</h2>
         </label>
-      </div>
-      <div class="row">
-        <h2 data-i18n="awakened">key</h2>
         <label class="settings" data-i18n-title="awakened" title="awakened">
           <input class="character-type" name="attr_flag_special" checked="checked" title="@{flag_special}" type="checkbox" value="magic"/>
+          <h2 data-i18n="awakened">key</h2>
         </label>
-      </div>
-      <div class="row">
-        <h2 data-i18n="emerged">key</h2>
         <label class="settings" data-i18n-title="emerged" title="emerged">
           <input class="character-type" name="attr_flag_special" checked="checked" title="@{flag_special}" type="checkbox" value="resonance"/>
+          <h2 data-i18n="emerged">key</h2>
         </label>
-      </div>
-      <div class="row">
-        <h2>Matrix Device</h2>
+        <hr/>
         <label class="settings" title="Matrix Device">
           <input class="character-type" name="attr_flag_matrix" title="@{flag_matrix}" type="checkbox" value="matrix"/>
+          <h2>Matrix Device</h2>
         </label>
-      </div>
-      <div class="row vehicle">
+        <hr/>
         <label class="settings" title="Drone">
           <input class="character-type" name="attr_flag_drone" title="@{flag_drone}" type="checkbox" value="drone"/>
+          <h2>Drone</h2>
         </label>
       </div>
     </div>
@@ -2306,12 +2300,12 @@
 <input type="hidden" name="attr_attribute_roll" value="" />
 
 <input type="hidden" name="attr_armor_name" value="select a Primary in Arms" />
-<input type="hidden" name="attr_soak" min="0" value="0" />
-<input type="hidden" name="attr_acid_protection" min="0" value="0" />
-<input type="hidden" name="attr_cold_protection" min="0" value="0" />
-<input type="hidden" name="attr_electrical_protection" min="0" value="0" />
-<input type="hidden" name="attr_fire_protection" min="0" value="0" />
-<input type="hidden" name="attr_radiation_protection" min="0" value="0" />
+<input type="hidden" name="attr_soak" min="0" value="3" />
+<input type="hidden" name="attr_acid_protection" min="0" value="3" />
+<input type="hidden" name="attr_cold_protection" min="0" value="3" />
+<input type="hidden" name="attr_electrical_protection" min="0" value="3" />
+<input type="hidden" name="attr_fire_protection" min="0" value="3" />
+<input type="hidden" name="attr_radiation_protection" min="0" value="3" />
 
 <input type="hidden" name="attr_primary_range_weapon" value="select a Primary in Arms" />
 <input type="hidden" name="attr_primary_range_weapon_skill" />
