Torg Eternity V.3.2: tab fix for firefox & minor other fixes, see Readme

--- a/Torg Eternity/Torg Eternity.html
+++ b/Torg Eternity/Torg Eternity.html
@@ -1,11 +1,11 @@
-<div class="record"><img height="25" width="75" src="https://s3.amazonaws.com/files.d20.io/images/3792926/fZmnHs3Mz7uTZ8C3uic84A/med.gif?1398003568"/> <br/>
-Eternity
+<div class="record"><img height="60px" width="160px" src="https://s3.amazonaws.com/files.d20.io/images/3792926/fZmnHs3Mz7uTZ8C3uic84A/med.gif?1398003568"/> <br/>
+<span>Eternity</span>
             <!-- Character Record Sheet -->
 </div>
-<input type="radio" name="attr_tab" class="sheet-tab sheet-tab1" value="1" title="Home" checked="checked" />
-<input type="radio" name="attr_tab" class="sheet-tab sheet-tab6" value="6" title="Notes" />
-<input type="radio" name="attr_tab" class="sheet-tab sheet-tab3" value="3" title="Perks" />
-<input type="radio" name="attr_tab" class="sheet-tab sheet-tab4" value="4" title="Powers" />
+<input type="radio" name="attr_tab" class="sheet-tab sheet-tab1" value="1" title="Home" checked="checked" /><span title="Character"></span>
+<input type="radio" name="attr_tab" class="sheet-tab sheet-tab2" value="2" title="Notes" /><span title="Equipment"></span>
+<input type="radio" name="attr_tab" class="sheet-tab sheet-tab3" value="3" title="Perks" /><span title="Perks"></span>
+<input type="radio" name="attr_tab" class="sheet-tab sheet-tab4" value="4" title="Powers" /><span title="Powers"></span>
 <!-- <input type="radio" name="attr_tab" class="sheet-tab sheet-tab2" value="2" title="NPC" /> -->
 
 <input class="sheet-settings-checkbox" type="checkbox" name="attr_show_settings" value="1" />
@@ -130,8 +130,8 @@ Eternity
 			<table>
             	 <tbody>  
                         <tr><td width="100%"><div class="textHead"><b>Damage</b></div></td></tr>
-                        <tr><td class="col1">Shock:   <input width="100%" type="number" name="attr_shock" title="Shock Dmg" /> / <input type="number" name="attr_shock_max" /></tr>
-                        <tr><td class="col1">Wounds: <input type="number" value="0" name="attr_wnd"/> / <input type="number" name="attr_wnd_max" /></td></tr>
+                        <tr><td class="col1"><span>Shock:&nbsp;&nbsp;&nbsp;</span>  <input width="100%" type="number" name="attr_shock" title="Shock Dmg" /> / <input type="number" name="attr_shock_max" /></tr>
+                        <tr><td class="col1"><span>Wounds:</span> <input type="number" value="0" name="attr_wnd"/> / <input type="number" name="attr_wnd_max" /></td></tr>
     		    </tbody>
     	    </table>
 			<table class="spacing">
@@ -669,7 +669,7 @@ Eternity
         <br><br>
     </fieldset>
 </div>
-<div class="sheet-tab-content sheet-tab6">
+<div class="sheet-tab-content sheet-tab2">
     <br>
     <table class="spacing"> </tbody> </table>
     <fieldset class="repeating_Equipment">
