Hc Svnt Dracones 2E: v.1.20 minor visual fixes

--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -4,7 +4,7 @@
 <input type="radio" name="attr_tab" class="tab tab2" value="2"                  ><span title="Page 2"></span>
 <input type="radio" name="attr_tab" class="tab tab3" value="3"                  ><span title="Page 3"></span>
 
-<span class="version bold">Sheet Version: 1.10</span>
+<span class="version bold">Sheet Version: 1.20test</span>
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
 <!--  ------------------------------------------------- PAGE 1 -------------------------------------------------------------- -->
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
@@ -56,38 +56,38 @@
     <div style="margin-top:10px;">
       <input type="number" name="attr_wounds_spent" value="0"><span class="bold slash">/</span><input type="number" name="attr_wounds_max"> 
     </div>
-    <div style="margin-bottom:15px;">
-      <span class="bold" style="margin-right:20px;">Wounds</span>
+    <div style="margin-bottom:5px;">
+      <span class="bold">Wounds</span>
     </div>
     
     <div>
       <input type="number" name="attr_initiative_spent" value="0"><span class="bold slash">/</span><input type="number" name="attr_initiative_max"> 
     </div>
-    <div style="margin-bottom:15px;">
-      <span class="bold" style="margin-left:20px;">Initiative</span>
+    <div style="margin-bottom:10px;">
+      <span class="bold">Initiative</span>
     </div>
 
     <div>
-      <input type="number" name="attr_resolve_save">
+      <input type="number" name="attr_resolve_save" class="save">
       <label>Resolve Save</label>
     </div>
     <div>
-      <input type="number" name="attr_dodge_save">
+      <input type="number" name="attr_dodge_save" class="save">
       <label>Dodge Save</label>
     </div>
     <div>
-      <input type="number" name="attr_endure_save">
+      <input type="number" name="attr_endure_save" class="save">
       <label>Endure Save</label>
     </div>
 
     <div class="spread-info">
-      <label>Evade <input     type="number" name="attr_evade"            value="1"></label>
-      <label>Endure <input    type="number" name="attr_mass_endure"      value="1"></label>
-      <label>Focus <input     type="number" name="attr_mass_focus_spent" value="0"><span class="slash">/</span><input type="number" name="attr_mass_focus_max"  value="1"></label>
+      <label><span class="padding1">Evade</span> <input     type="number" name="attr_evade"            value="1"></label>
+      <label><span class="padding1">Endure</span> <input    type="number" name="attr_mass_endure"      value="1"></label>
+      <label><span class="padding1">Focus</span> <input     type="number" name="attr_mass_focus_spent" value="0"><span class="slash">/</span><input type="number" name="attr_mass_focus_max"  value="1"></label>
       <label>Readiness <input type="number" name="attr_readiness_spent"  value="0" value="1"><span class="slash">/</span><input type="number" name="attr_readiness_max" value="1"></label>
 
-      <label title="Ranged Damage Bonus">RDB <input type="number" name="attr_mass_rdb" value="1"></label>
-      <label title="Melee Damage Bonus" >MDB <input type="number" name="attr_mass_mdb" value="1"></label>
+      <label title="Ranged Damage Bonus"><span class="padding2">RDB</span><input type="number" name="attr_mass_rdb" value="1"></label>
+      <label title="Melee Damage Bonus" ><span class="padding2">MDB</span><input type="number" name="attr_mass_mdb" value="1"></label>
     </div>
 
   </div>
