Hc Svnt Dracones 2E: v.1.20 update preview, add number field to techniques

--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -4,7 +4,7 @@
 <input type="radio" name="attr_tab" class="tab tab2" value="2"                  ><span title="Page 2"></span>
 <input type="radio" name="attr_tab" class="tab tab3" value="3"                  ><span title="Page 3"></span>
 
-<span class="version bold">Sheet Version: 1.20test</span>
+<span class="version bold">Sheet Version: 1.20</span>
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
 <!--  ------------------------------------------------- PAGE 1 -------------------------------------------------------------- -->
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
@@ -215,6 +215,7 @@
     <span class="bold">Techniques -- Total:<input type="number" name="attr_techniques"> Spent: <input type="number" name="attr_techniques_spent"></span>
     <fieldset class="repeating_technique">
         <input name="attr_technique" type="text" placeholder="Technique 1">
+        <span class="bold">p.(<input name="attr_technique_source" type="number" class="ref">)</span>
     </fieldset>
   </div>
 
